fixing of admin wiring
